@@ -1,3 +1,6 @@
+14 Sep 2003 mipsator
+ * made Makefile more portable.
+
 # snapshot 0.6.3
 
 14 Sep 2003 mipsator
